unpackaged/main/default/objects/Neo_Verify__c/Neo_Verify__c.object-meta.xml
<CustomObject>
    <label>Neo Verify</label>
    <nameField>
        <displayFormat>A-{0000000000}</displayFormat>
        <label>Neo Verify Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Neo Verify</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>