unpackaged/main/default/objects/Neo_Verify__c/fields/Average_Credits_Deposits__c.field-meta.xml
<CustomField>
    <fullName>Average_Credits_Deposits__c</fullName>
    <label>Average Credits / Deposits</label>
    <length>255</length>
    <type>Text</type>
</CustomField>