unpackaged/main/default/objects/Neo_Verify__c/fields/Average_Savings__c.field-meta.xml
<CustomField>
    <fullName>Average_Savings__c</fullName>
    <label>Average Savings</label>
    <length>50</length>
    <type>Text</type>
</CustomField>