unpackaged/main/default/objects/Neo_Verify__c/fields/Avg_Paycheck__c.field-meta.xml
<CustomField>
    <fullName>Avg_Paycheck__c</fullName>
    <label>Avg. Paycheck</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>