unpackaged/main/default/objects/Neo_Verify__c/fields/Based_on_Net_Credits_Deposits__c.field-meta.xml
<CustomField>
    <fullName>Based_on_Net_Credits_Deposits__c</fullName>
    <label>Based on Net Credits / Deposits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>