unpackaged/main/default/objects/Neo_Verify__c/fields/Chk_Svg_Acct_Balances__c.field-meta.xml
<CustomField>
    <fullName>Chk_Svg_Acct_Balances__c</fullName>
    <label>Chk &amp; Svg Acct Balances</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>