unpackaged/main/default/objects/Neo_Verify__c/fields/Monthly_Credits_Deposits__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Credits_Deposits__c</fullName>
    <label>Monthly Credits / Deposits</label>
    <length>255</length>
    <type>Text</type>
</CustomField>