unpackaged/main/default/objects/Neo_Verify__c/fields/Monthly_Net_Credits_Deposits__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Net_Credits_Deposits__c</fullName>
    <label>Monthly Net Credits / Deposits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>