unpackaged/main/default/objects/Neo_Verify__c/fields/Mothnly_Other_Credits_Deposits__c.field-meta.xml
<CustomField>
    <fullName>Mothnly_Other_Credits_Deposits__c</fullName>
    <label>Monthly Other Credits / Deposits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>