unpackaged/main/default/objects/Neo_Verify__c/fields/Net_Total_Stated_Income__c.field-meta.xml
<CustomField>
    <fullName>Net_Total_Stated_Income__c</fullName>
    <label>Net Total Stated Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>