unpackaged/main/default/objects/Neo_Verify__c/fields/Next_Paydate_estimate__c.field-meta.xml
<CustomField>
    <fullName>Next_Paydate_estimate__c</fullName>
    <label>Next Paydate (estimate)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>