unpackaged/main/default/objects/Neo_Verify__c/fields/NSF__c.field-meta.xml
<CustomField>
    <fullName>NSF__c</fullName>
    <label>NSF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>