unpackaged/main/default/objects/Neo_Verify__c/fields/NSF_OD__c.field-meta.xml
<CustomField>
    <fullName>NSF_OD__c</fullName>
    <label>NSF/OD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>