unpackaged/main/default/objects/Neo_Verify__c/fields/Other_Credits_Deposiits__c.field-meta.xml
<CustomField>
    <fullName>Other_Credits_Deposiits__c</fullName>
    <label>Other Credits / Deposiits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>