unpackaged/main/default/objects/Neo_Verify__c/fields/Payday_Loans__c.field-meta.xml
<CustomField>
    <fullName>Payday_Loans__c</fullName>
    <label>Payday Loans</label>
    <length>255</length>
    <type>Text</type>
</CustomField>