unpackaged/main/default/objects/Neo_Verify__c/fields/Payroll_Dates__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Dates__c</fullName>
    <label>Payroll Dates</label>
    <length>200</length>
    <type>Text</type>
</CustomField>