unpackaged/main/default/objects/Neo_Verify__c/fields/Payroll_Source_Company__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Source_Company__c</fullName>
    <label>Payroll Source Company</label>
    <length>200</length>
    <type>Text</type>
</CustomField>