unpackaged/main/default/objects/Neo_Verify__c/fields/Total_Earnings__c.field-meta.xml
<CustomField>
    <fullName>Total_Earnings__c</fullName>
    <label>Total Earnings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>