unpackaged/main/default/objects/Neo_Verify__c/fields/Transfer__c.field-meta.xml
<CustomField>
    <fullName>Transfer__c</fullName>
    <label>Transfer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>