unpackaged/main/default/objects/Neo_Verify__c/fields/Unrecognizable__c.field-meta.xml
<CustomField>
    <fullName>Unrecognizable__c</fullName>
    <label>Unrecognizable</label>
    <length>200</length>
    <type>Text</type>
</CustomField>